# dct-diff

./: .gitignore  CLAUDE.md  README.md  claude.md  dashboard.py  main.py  pyproject.toml  test.py
configs/: config.yaml
configs/generation/: dct_paper.yaml  debug.yaml
configs/model/: deepseek_math.yaml  gpt2.yaml  qwen_32b.yaml  qwen_7b.yaml
configs/training/: basic.yaml
dct-diff/: dct.py
dct_diff/: __init__.py  dct.py  steer_models.py  utils.py
demo/: demo.ipynb  demo_32b.ipynb  demo_harmful.ipynb
legacy/demo/: demo.ipynb  demo_32b.ipynb  demo_harmful.ipynb
legacy/runs/: deepseek_eval_0_128.csv  deepseek_eval_128_256.csv  deepseek_eval_256_384.csv  deepseek_eval_384_512.csv  eval_deepseek.ipynb  eval_exp.csv  eval_harmful.py  eval_lin.csv  eval_mistral_rr.ipynb  eval_quadratic.csv  multiplicity.ipynb  run_eval_harmful.py  run_score_deepseek.py  run_train_harmful.py  score_deepseek.py  synthetic.ipynb  train_deepseek.ipynb  train_harmful.py  train_mistral_rr.ipynb
legacy/src/: dct.py
runs/: eval_deepseek.ipynb  eval_harmful.py  eval_linproj.csv  mistral_rr_test_completions.json  run_score_deepseek.py  score_deepseek.py  synthetic.ipynb  train_deepseek.ipynb
src/: dct.py
